--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
