--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "inversify": "^6.0.1",
     "inversify-react": "^1.1.0",
     "openai": "^3.2.1",
